# fast-nuitka

./: .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: build.yml
script/: build.sh  format.sh  release.sh
src/: run.py
src/app/: main.py
src/conf/: settings.py
src/conf/app/: __init__.py  base.py  dev.py  prod.py
src/core/: conf.py  gunicorn.py
src/core/app/: __init__.py  base.py  dev.py  prod.py
src/static/js/: TweenMax.min.js
src/templates/: index.html
