[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["liushaofeng <bookandmusic@yeah.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^22.0.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
