[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["liushaofeng <bookandmusic@yeah.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^22.0.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.1"
autoflake = "^2.3.1"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
